# Warm-Start-Diffusion

./: .gitignore  README.md  pyproject.toml  run.py
environment/: env_train_gpu.yaml
report/: final.tex  proposal.tex  refs.bib
scripts/era5-mini/: 15o-12h1-wmse-edm256d-33lr33mlr-128ebs-uniform.sh  1o-12h1-wcrps-adm256d-13lr13mlr-w2-005a0mwd-32ebs-s20k.sh  1o-12h1-wmae-adm256d-13lr13mlr-w2-005a0mwd-32ebs-s20k.sh  README.md  finetune_1.61.6_1.6_1.6_WSTRAIN.sh
src/: train.py
src/configs/: main_config.yaml
src/configs/callbacks/: default.yaml
src/configs/datamodule/: _base_data_config.yaml  era5_base.yaml  era5_mini.yaml
src/configs/diffusion/: _base.yaml
src/configs/experiment/: era5_adm.yaml  era5_adm_mini.yaml  era5_base.yaml  era5_edm_unet.yaml
src/configs/logger/: wandb.yaml
src/configs/model/: _base_model_config.yaml
src/configs/module/: _base_experiment_config.yaml  _base_multi_horizon_config.yaml
src/configs/optimizer/: adamw.yaml
src/configs/scheduler/: linear_warmup_cosine.yaml
src/configs/trainer/: default.yaml
src/datamodules/: _dataset_dimensions.py  abstract_datamodule.py  era5.py
src/diffusion/: _base_diffusion.py  edm.py
src/evaluation/: metrics_wb.py
src/experiment_types/: _base_experiment.py  forecasting_multi_horizon.py
src/models/: _base_model.py  networks_edm.py
src/optimization/: hybrid_optim.py  losses.py  lr_scheduler.py  muon.py
src/utilities/: checkpointing.py  config_utils.py  naming.py  normalization.py  packer.py  plotting.py  timing.py  utils.py  wandb_api.py  wandb_callbacks.py
(+16 files in other folders)
